# codeq

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: code-intelligence-landscape.md
scripts/: _bench_samples.py  codeq-model-bench.py
src/codeq/: __init__.py  __main__.py  cli.py  json_handler.py
src/codeq/features/capabilities/: command.py
src/codeq/features/code_context/: command.py
src/codeq/features/dependencies/: command.py  parsing.py
src/codeq/features/doctor/: command.py
src/codeq/features/pattern_check/: command.py
src/codeq/features/references/: command.py
src/codeq/features/rename/: command.py
src/codeq/features/repo_map/: command.py
src/codeq/features/symbol_body/: command.py
src/codeq/features/symbol_search/: command.py
src/codeq/features/tags/: command.py
src/codeq/json_handler/: __init__.py  core.py  dispatch.py  handlers.py  handlers_graph.py  handlers_meta.py  handlers_symbol.py
src/codeq/shared/: config.py  core.py  extraction.py  llm.py  locators.py  lombok.py  search.py  tree_sitter_extract.py
tests/: test-code-intelligence.py
tests/code_intelligence/: __init__.py  conftest.py  fixtures.py  helpers.py  runner.py  test_codeq_check.py  test_codeq_context.py  test_codeq_core.py  test_codeq_doctor.py  test_codeq_json_handlers.py  test_codeq_json_structured.py  test_codeq_lombok.py  test_codeq_refs.py  test_codeq_rename.py  test_codeq_repo_map.py  test_codeq_typescript.py  test_codeq_vendor.py  test_core.py  test_external_tools.py  test_extraction.py  test_json_unit.py  test_lang_matrix.py  test_project_memory.py  test_tree_sitter_extract.py
