[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codeq-cli"
version = "1.6.0"
description = "Precise code-fact extraction for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "heldigard" }
]
keywords = ["cli", "ctags", "ast-grep", "code-intelligence", "llm-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
ast = ["tree-sitter>=0.25", "tree-sitter-language-pack>=0.10"]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "tree-sitter>=0.25",
  "tree-sitter-language-pack>=0.10",
]

[project.scripts]
codeq = "codeq.cli:main"

[project.urls]
Homepage = "https://github.com/heldigard/codeq"
Repository = "https://github.com/heldigard/codeq"
Issues = "https://github.com/heldigard/codeq/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=codeq --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_language_pack"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/codeq"]
