[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codeq-cli"
dynamic = ["version"]
description = "Precise code-fact extraction for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "heldigard" }
]
keywords = ["cli", "ctags", "ast-grep", "code-intelligence", "llm-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
ast = ["tree-sitter>=0.25", "tree-sitter-language-pack>=0.10"]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "mypy>=1.10",
  "tree-sitter>=0.25",
  "tree-sitter-language-pack>=0.10",
]

[project.scripts]
codeq = "codeq.cli:main"

[project.urls]
Homepage = "https://github.com/heldigard/codeq"
Repository = "https://github.com/heldigard/codeq"
Issues = "https://github.com/heldigard/codeq/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=codeq --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_language_pack"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Extend (not replace) ruff defaults: add import-sort, pyupgrade, bugbear,
# simplify, pylint-warnings, ruff-specific, naming, executable, string-concat.
extend-select = [
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # flake8-bugbear
  "BLE",            # flake8-blind-except
  "SIM",            # flake8-simplify
  "PLW",            # pylint warnings
  "RUF",            # ruff-specific
  "ISC",            # implicit string concat
  "N",              # pep8-naming
  "EXE",            # flake8-executable
]
ignore = [
  "E501",           # line-length: enforced by ruff format, not lint
]

[tool.ruff.lint.per-file-ignores]
# Legacy compatibility runner — hyphenated name predates package convention.
"tests/test-code-intelligence.py" = ["N999"]
# Bench/dev scripts — not shipped; broad catches and concat style are fine.
"scripts/*" = ["BLE001", "ISC004"]

[tool.vulture]
# Mock-injection FP class: @patch-injected params and Mock attribute configs
# are isolation plumbing, not dead code (codescan dead flagged 20/20 FPs).
# pytestmark is read by pytest's collection (module-level mark), not by code.
ignore_names = ["return_value", "side_effect", "mock_*", "pytestmark"]
min_confidence = 60

[tool.hatch.version]
# Single source of truth: src/codeq/__init__.py::__version__ (the CLI reads
# the same constant, so `codeq --version` can never drift from the package).
path = "src/codeq/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/codeq"]
